# golang-tour

./: README.md  WORKSPACE  build.sh  deps.bzl  go.mod  go.work  test.sh  update.sh
.run/: build.run.xml  test.run.xml
src/: BUILD.bazel  main_test.go  rnd_utils.go  strutils.go  tour_01_welcome_test.go  tour_02_basics_test.go  tour_03_flowcontrol_test.go  tour_04_moretypes_test.go  tour_05_methods_test.go  tour_06_generics_test.go  tour_07_concurrency_test.go  tour_utils.go  tour_utils_test.go
src/ch1ex1/: BUILD.bazel
