load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "src_lib",
    srcs = [
        "main.go",
        "tour_utils.go",
    ],
    importpath = "github.com/cbismuth/golang-tour/src",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "src_test",
    srcs = [
        "main_test.go",
        "tour_01_welcome_test.go",
        "tour_02_basics_test.go",
        "tour_03_flowcontrol_test.go",
        "tour_04_moretypes_test.go",
        "tour_05_methods_test.go",
        "tour_06_generics_test.go",
        "tour_utils_test.go",
    ],
    embed = [":src_lib"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//suite",
        "@org_golang_x_tour//pic",
        "@org_golang_x_tour//wc",
    ],
)
