load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ch1ex1_lib",
    srcs = ["main.go"],
    importpath = "github.com/cbismuth/golang-tour/src/ch1ex1",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ch1ex1",
    embed = [":ch1ex1_lib"],
    visibility = ["//visibility:public"],
)
